--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -23,6 +23,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # This location matches all paths starting with /api/auth/recruitment_survey_phase
+        location /api/surveys {
+            proxy_pass http://recruitment_survey_phase:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
         # # Proxy requests to /api/dupa to the ERP backend
         # location /api/dupa {
         #     proxy_pass http://erp-backend:3000;
