--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -32,6 +32,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        location /api/mongolia {
+            proxy_pass http://mongo-express:8081;  # Port where Mongo Express is running
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
         # location /pgadmin {
         #     proxy_set_header X-Script-Name /pgadmin;  # finding out this line took me only 8 hours
         #     proxy_pass http://pgadmin:5050;
