--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -6,31 +6,31 @@ http {
     server {
         listen 80;
 
-        # # This location matches the specific path /api/auth/setup-roles
-        # location /api/auth/setup-roles {
-        #     # You can define what to do here, such as serve static content,
-        #     # or leave empty to do nothing
-        #     # For example:
-        #     return 200 "This path is not redirected";
-        # }
+        # This location matches the specific path /api/auth/setup-roles
+        location /api/auth/setup-roles {
+            # You can define what to do here, such as serve static content,
+            # or leave empty to do nothing
+            # For example:
+            return 200 "This path is not redirected";
+        }
 
-        # # This location matches all paths starting with /api/auth/ but excluding /api/auth/thispleasedont
-        # location ~ ^/api/auth/(?!setup-roles).* {
-        #     proxy_pass http://auth_and_permissions:3000;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        # This location matches all paths starting with /api/auth/ but excluding /api/auth/thispleasedont
+        location ~ ^/api/auth/(?!setup-roles).* {
+            proxy_pass http://auth_and_permissions:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-        # # This location matches all paths starting with /api/auth/recruitment_survey_phase
-        # location /api/surveys {
-        #     proxy_pass http://recruitment_survey_phase:3000;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
-        # }
+        # This location matches all paths starting with /api/auth/recruitment_survey_phase
+        location /api/surveys {
+            proxy_pass http://recruitment_survey_phase:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
         location /api/mongolia {
             proxy_pass http://mongo_express:8081;  # Port where Mongo Express is running
@@ -50,16 +50,16 @@ http {
         #     proxy_set_header X-Forwarded-Proto $scheme;
         # }
 
-        # # Proxy all other requests to the React app
-        # location / {
-        #     proxy_pass http://frontend:8080;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header X-Forwarded-Proto $scheme;
+        # Proxy all other requests to the React app
+        location / {
+            proxy_pass http://frontend:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
 
-        #     proxy_set_header Upgrade $http_upgrade;  # Enable WebSocket support (for hmr purpose only)
-        #     proxy_set_header Connection "upgrade";  # Required for WebSocket (for hmr purpose only)
+            proxy_set_header Upgrade $http_upgrade;  # Enable WebSocket support (for hmr purpose only)
+            proxy_set_header Connection "upgrade";  # Required for WebSocket (for hmr purpose only)
 
     #     # Handle client-side routing
     #     try_files $uri $uri/ @rewrites;  # Try to serve files first, then handle rewrites
@@ -75,6 +75,6 @@ http {
     #     # Set cache expiration for static files
     #     expires 1y;
     #     add_header Cache-Control "public";
-        # }
+        }
     }
 }
