--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -33,7 +33,7 @@ http {
         }
 
         location /api/mongolia {
-            proxy_pass http://mongo-express:8081;  # Port where Mongo Express is running
+            proxy_pass http://mongo_express:8081;  # Port where Mongo Express is running
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
