--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.0.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "split-pane-react": "^0.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
