--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:16 AS development
 WORKDIR '/app'
 COPY ./package.json ./
 COPY ./package-lock.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 CMD [ "npm", "run", "dev" ]
 
@@ -10,7 +10,7 @@ FROM node:16 AS build
 WORKDIR '/app'
 COPY ./package.json ./
 COPY ./package-lock.json ./
-RUN npm install
+RUN npm install --legacy-peer-deps
 COPY . .
 ENV NODE_ENV=production
 RUN npm run build
@@ -20,6 +20,6 @@ WORKDIR '/app'
 COPY --from=build /app/dist ./dist
 COPY ./package.json ./
 COPY ./package-lock.json ./
-RUN npm install --only=production
+RUN npm install --only=production --legacy-peer-deps
 RUN npm install -g serve
 CMD [ "serve", "-s", "dist", "-l", "8080" ]
