--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,13 +19,14 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
-    "split-pane-react": "^0.1.3"
+    "react-split-pane": "^0.1.92"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
