[docker-compose, nginx] set up the new microservice

--- a/API-gateway/nginx.conf
+++ b/API-gateway/nginx.conf
@@ -23,9 +23,18 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # This location matches all paths starting with /api/auth/recruitment_survey_phase
+        # This location matches all paths starting with /api/surveys
         location /api/surveys {
             proxy_pass http://recruitment_survey_phase:3000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # This location matches all paths starting with /api/interviews
+        location /api/interviews {
+            proxy_pass http://recruitment_interview_phase:3000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
